--- a/products.html
+++ b/products.html
@@ -70,7 +70,7 @@
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://images.pexels.com/photos/3735747/pexels-photo-3735747.jpeg?cs=srgb&dl=pexels-polina-tankilevitch-3735747.jpg&fm=jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded text-justify">
-            <p class="mb-0">Método basado en proteínas MS para detectar específicamente proteínas del virus del SARS-CoV-2 de soluciones diluidas de muestras nasofaringeas de pacientes con COVID-19. Este método sencillo se basa en una precipitación de proteínas con acetona, seguida de una digestión tríptica y un análisis espectrométrico de masas dirigido de proteínas del SARS-CoV-2. Con este enfoque, se pueden identificar péptidos que se originan a partir de la nucleoproteína del SARS-CoV-2.</p>
+            <p class="mb-0">Método basado en proteínas MS para detectar específicamente proteínas del virus del SARS-CoV-2 de soluciones diluidas de muestras nasofaríngeas de pacientes con COVID-19. Este método sencillo se basa en una precipitación de proteínas con acetona, seguida de una digestión tríptica y un análisis espectrométrico de masas dirigido de proteínas del SARS-CoV-2. Con este enfoque, se pueden identificar péptidos que se originan a partir de la nucleoproteína del SARS-CoV-2.</p>
           </div>
         </div>
       </div>
@@ -83,14 +83,14 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex mr-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Quantitative Real-Time Polymerase Chain Reaction</span>
+              <span class="section-heading-upper">Quantitative Real-Time Polymerase Chain Reaction (qRT-PCR)</span>
             </h2>
           </div>
         </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://live.staticflickr.com/65535/49868940808_5b9ae7d815_b.jpg" alt="">
         <div class="product-item-description d-flex ml-auto text-justify">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">El funcionamiento de esta técnica consiste la toma de muestra mediante un hisopado nasofaríngeo. El inicio del proceso consiste en el proceso de transcripción, es decir el ARN del virus permite la síntesis de una cadena, el cDNA utilizando una enzima específica denominada transcriptasa reversa, una vez sintetizado; para corroborar la síntesis adecuada del cDNA se amplificará mediante la técnica reacción en cadena de la polimerasa (PCR). Una vez confirmado, la reacción de amplificación (qRT-PCR) se realiza en placas de 96 pozos, utilizando el cDNA previamente sintetizado, cada oligonucleótido a una determinada concentración, la enzima SYBR Green y agua.</p>
+            <p class="mb-0">El funcionamiento de esta técnica consiste la toma de muestra mediante un hisopado nasofaríngeo. El inicio del proceso consiste en la transcripción, es decir el ARN del virus permite la síntesis de una cadena complementaria (cDNA) utilizando una enzima específica denominada transcriptasa reversa, una vez sintetizado; para corroborar la síntesis adecuada del cDNA se amplificará mediante la técnica reacción en cadena de la polimerasa (PCR). Una vez confirmado, se procede con la reacción de amplificación (qRT-PCR) se realiza en placas de 96 pozos, utilizando el cDNA previamente sintetizado, diferentes oligonucleótidos a una determinada concentración, la enzima SYBR Green y agua.</p>
           </div>
         </div>
       </div>
@@ -110,9 +110,9 @@
               <h2 class="section-heading mb-4">
                 <span class="section-heading-upper">Comparación de ambas técnicas</span>
                </h2>
-              <p>Después de realizar el análisis entre ambas tecnicas nuetsra opinion es:</p>
-              <p class="mb-0">La tecnica de qRT-PCR es una técnica muy util y exacta que se ha utilizado durante ya un tiempo para hacer la detección oportuna del virus SARS-CoV-2 debido a que se trabaja con el material genético de este, sin embargo es una técnica costosa debido a los reactivos que se manejan a la hora de hacer el procedimiento y tardada debido altiempo de accion de termociclador. Por otro lado es una técnica muy certera que nos ofrece resultados claros sin necesidad de realizar métodos invasivos para la obtencion de muestra.</p>
-              <p>La tecnica de Espectrometría de masas es una tecnica muy precisa que nos ofrece reaultados en un tiempo muy corto debido a que se trabaja con proteínas haciendo uso de bases de datos que nos permiten obtener resultados mas claros y precisos, ademas de ello no es costosa lo cual lo hace mas accesible al público, además la toma demuestra es no invasiva para el paciente. Es por ello que optamos por la implemetación de esta técnica.</p>          
+              <p>Después de realizar el análisis entre ambas técnicas nuestra opinión es:</p>
+              <p class="mb-0">La técnica de qRT-PCR es muy util, exacta y se ha utilizado durante ya un tiempo para hacer la detección oportuna del virus SARS-CoV-2 debido a que se trabaja con el material genético de este, sin embargo es una técnica costosa debido a los reactivos que se manejan a la hora de hacer el procedimiento y tardada debido al tiempo de accion del termociclador. Por otro lado es una técnica muy certera que nos ofrece resultados claros sin necesidad de realizar métodos invasivos para la obtencion de muestra.</p>
+              <p>La técnica de Espectrometría de masas es muy precisa y nos ofrece reaultados en un tiempo muy corto debido a que se trabaja con proteínas haciendo uso de bases de datos que nos permiten obtener resultados mas claros y precisos, ademas de ello no es costosa lo cual lo hace mas accesible al público y la toma de muestra es no invasiva para el paciente. Es por ello que optamos por la implemetación de esta técnica.</p>          
             </div>
           </div>
         </div>
@@ -124,7 +124,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Team Dinamita 2020</p>
+      <p class="m-0 small">Copyright &copy; Team D-17 2020</p>
     </div>
   </footer>
 
