--- a/products.html
+++ b/products.html
@@ -110,6 +110,7 @@
               <h2 class="section-heading mb-4">
                 <span class="section-heading-upper">Comparación de ambas técnicas</span>
                </h2>
+              <div class="cta-inner text-justify rounded">
               <p>Después de realizar el análisis entre ambas técnicas nuestra opinión es:</p>
               <p class="mb-0">La técnica de qRT-PCR es muy util, exacta y se ha utilizado durante ya un tiempo para hacer la detección oportuna del virus SARS-CoV-2 debido a que se trabaja con el material genético de este, sin embargo es una técnica costosa debido a los reactivos que se manejan a la hora de hacer el procedimiento y tardada debido al tiempo de accion del termociclador. Por otro lado es una técnica muy certera que nos ofrece resultados claros sin necesidad de realizar métodos invasivos para la obtencion de muestra.</p>
               <p>La técnica de Espectrometría de masas es muy precisa y nos ofrece reaultados en un tiempo muy corto debido a que se trabaja con proteínas haciendo uso de bases de datos que nos permiten obtener resultados mas claros y precisos, ademas de ello no es costosa lo cual lo hace mas accesible al público y la toma de muestra es no invasiva para el paciente. Es por ello que optamos por la implemetación de esta técnica.</p>          
