--- a/store.html
+++ b/store.html
@@ -64,8 +64,8 @@
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
                 <span class="section-heading-upper">Bibliografía Consultada</span>
-                <div class="cta-inner text-justify rounded">
-              </h2>
+             </h2>
+              <div class="cta-inner text-justify rounded">
               <p>Científicos de U. Autónoma y U. Talca descubren técnica más rápida para detectar Coronavirus. (s. f.). Universidad Autonoma de Chile. Recuperado 13 de agosto de 2020, de https://www.uautonoma.cl/news/cientificos-de-u-autonoma-y-u-talca-descubren-nuevo-metodo-de-diagnostico-de-covid-19-con-tecnica-mas-rapida-que-pcr</p>
               <p>Cárdenas-Bravo L, Cabrera-Rayo A, Pérez-Barragán E, Márquez-Díaz F y col. Recursos diagnósticos en la infección por SARS-CoV-2. Med Int Méx. 2020;36(Suplemento 2):S26-S28. https://doi.org/10.24245/mim. V36id.4194 https://www.nature.com/articles/s41587-020-06</p>
               <p>EN Nikolaev., MI Indeykina., AG Brzhozovskiy., AE Bugrova., AS Kononikhin., NL Starodubtseva., EV Petrotchenko., G Kovalev., CH Borchers., GT Sukhikh. (2020). Mass Spectrometric detection of SARS-CoV-2 virus in scrapings of the epithelium of the nasopharynx of infected patients via Nucleocapsid N protein. Consultado en 08/13/2020 en https://www.biorxiv.org/content/10.1101/2020.05.24.113043v1.full.</p>
@@ -90,12 +90,12 @@
             </div>
           </div>
         </div>
+          </section>
       </div>
     </section>
-
     <section class="page-section about-heading">
       <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2013.19.50.jpeg?raw=true" alt="">
+        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2013.19.50.jpeg?raw=true" width="1500" height="500" alt="">
         <div class="about-heading-content">
           <div class="row">
             <div class="col-xl-9 col-lg-10 mx-auto">
