--- a/store.html
+++ b/store.html
@@ -77,9 +77,11 @@
               <p>Trilla, A., Vieta Pascual, E., Maria Peri, J., Rubinat, M., & Violan, M. (2020, 12 marzo). ¿Qué es el Coronavirus SARS-CoV-2? | Hospital. Clínic Barcelona. https://www.clinicbarcelona.org/asistencia/enfermedades/covid-19/definicion</p>
                <p class="address mb-5">
                 <em>
+                  <div class="cta-inner text-center rounded">
                   <strong>Equipo D-17</strong>
                   </em>
               </p>
+                 <div class="cta-inner text-center rounded">
               <p class="mb-0">
                 <small>
                   <em>Agradecimientos</em>
@@ -108,9 +110,11 @@
   <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
     <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.49.06.jpeg?raw=true" alt="Girl in a jacket"></td>
-    <td>Gabriela Orona</td>
-    <td>Asesora</td>
+    <td>Gabriela Orona
+    Asesora</td>
+   </tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
+   <tr>
     <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.47.42.jpeg?raw=true" alt="Girl in a jacket"></td>
     <td>Diana García</td>
     <td>Universidad de guanajuato</td>
