--- a/store.html
+++ b/store.html
@@ -97,7 +97,7 @@
     </section>
     <section class="page-section about-heading">
       <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2013.19.50.jpeg?raw=true" width="1500" height="500" alt="">
+        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2013.19.50.jpeg?raw=true" width="1000" height="350" alt="">
         <div class="about-heading-content">
           <div class="row">
             <div class="col-xl-9 col-lg-10 mx-auto">
@@ -107,22 +107,24 @@
                   <span class="section-heading-lower">Conocenos</span>
                 </h2>
                 <table style="width:100%">
-  <tr>
+
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
+     <tr>
     <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.49.06.jpeg?raw=true" alt="Girl in a jacket"></td>
-    <td>Gabriela Orona
-    Asesora</td>
-   </tr>
+    <td>Gabriela Orona</td>
+    <td>Asesora</td>
+    </tr>
+        
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
    <tr>
     <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.47.42.jpeg?raw=true" alt="Girl in a jacket"></td>
     <td>Diana García</td>
     <td>Universidad de guanajuato</td>
-    <td>Lic. Químico Farmacéutico Biólogo, 3° Semestre.</td>
+    <td>Lic. Químico Farmacéutico Biólogo, 2° Semestre.</td>
   </tr>
   <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
-    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket"></td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.46.47%20(1).jpeg?raw=true" alt="Girl in a jacket"></td>
     <td>Jessica Mares</td>
     <td>Universidad Ibaroamericana de Leon</td>
     <td>Ingenieria en Biotecnología, 5° Semestre</td>
@@ -136,7 +138,7 @@
   </tr>
 <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
-    <td><img    class="intro-img img-fluid mb-3 mb-lg-0 rounded"   src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.46.47.jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td><img    class="intro-img img-fluid mb-3 mb-lg-0 rounded"   src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/My%20pic.jpeg?raw=true" alt="Girl in a jacket"></td>
     <td>Melisza Córdova</td>
     <td>Universidad De Sonora</td>
     <td>Lic. Químico Biólogo Clínico, 7° Semestre.</td>
