--- a/store.html
+++ b/store.html
@@ -65,6 +65,7 @@
               <h2 class="section-heading mb-5">
                 <span class="section-heading-upper">Bibliografía Consultada</span>
              </h2>
+              <small>
               <div class="cta-inner text-justify rounded">
               <p>Científicos de U. Autónoma y U. Talca descubren técnica más rápida para detectar Coronavirus. (s. f.). Universidad Autonoma de Chile. Recuperado 13 de agosto de 2020, de https://www.uautonoma.cl/news/cientificos-de-u-autonoma-y-u-talca-descubren-nuevo-metodo-de-diagnostico-de-covid-19-con-tecnica-mas-rapida-que-pcr</p>
               <p>Cárdenas-Bravo L, Cabrera-Rayo A, Pérez-Barragán E, Márquez-Díaz F y col. Recursos diagnósticos en la infección por SARS-CoV-2. Med Int Méx. 2020;36(Suplemento 2):S26-S28. https://doi.org/10.24245/mim. V36id.4194 https://www.nature.com/articles/s41587-020-06</p>
@@ -75,6 +76,7 @@
               <p>Universidad de Córdoba. Unidad de Proteómica (2018). Identificación proteínas por espectrometría de masas MALDI TOF-TOF. Consultado en 08/13/2020 en https://www.uco.es/investigacion/portal/images/documentos/scai/equipamiento_proteomica/PROTEOMICA-Ficha_Tecnica-MALDI__TOF-TOF_v3.pdf.</p>
               <p>Tebar-Ferreia, P. (2018). Identificación proteínas por espectrometría de masas. Equipamento. Consultado en 08/13/2020 en https://silo.tips/download/identificacion-de-proteinas-por-espectrometria-de-masas-equipamiento#.</p>
               <p>Trilla, A., Vieta Pascual, E., Maria Peri, J., Rubinat, M., & Violan, M. (2020, 12 marzo). ¿Qué es el Coronavirus SARS-CoV-2? | Hospital. Clínic Barcelona. https://www.clinicbarcelona.org/asistencia/enfermedades/covid-19/definicion</p>
+              </small>
                <p class="address mb-5">
                 <em>
                   <div class="cta-inner text-center rounded">
