--- a/store.html
+++ b/store.html
@@ -99,7 +99,6 @@
     </section>
     <section class="page-section about-heading">
       <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2013.19.50.jpeg?raw=true" width="1000" height="350" alt="">
         <div class="about-heading-content">
           <div class="row">
             <div class="col-xl-9 col-lg-10 mx-auto">
@@ -112,7 +111,7 @@
 
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
      <tr>
-    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.49.06.jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.49.06.jpeg?raw=true" alt="Girl in a jacket" width="100" heigth="100"></td>
     <td>Gabriela Orona</td>
     <td>Asesora</td>
     </tr>
