--- a/store.html
+++ b/store.html
@@ -111,35 +111,35 @@
 
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
      <tr>
-    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.49.06.jpeg?raw=true" alt="Girl in a jacket" width="100" heigth="100"></td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.49.06.jpeg?raw=true" alt="Girl in a jacket" width="200" heigth="200"></td>
     <td>Gabriela Orona</td>
     <td>Asesora</td>
     </tr>
         
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
    <tr>
-    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.47.42.jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.47.42.jpeg?raw=true" alt="Girl in a jacket" width="200" heigth="200"></td>
     <td>Diana García</td>
     <td>Universidad de guanajuato</td>
     <td>Lic. Químico Farmacéutico Biólogo, 2° Semestre.</td>
   </tr>
   <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
-    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.46.47%20(1).jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.46.47%20(1).jpeg?raw=true" alt="Girl in a jacket" width="200" heigth="250"></td>
     <td>Jessica Mares</td>
     <td>Universidad Ibaroamericana de Leon</td>
     <td>Ingenieria en Biotecnología, 5° Semestre</td>
   </tr>
 <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
-    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/Victor%20pic.jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/Victor%20pic.jpeg?raw=true" alt="Girl in a jacket" width="200" heigth="250"></td>
     <td>Victor Gómez</td>
     <td>Universidad Autonoma de México</td>
     <td>Licenciatura en Química, 7° Semestre.</td>
   </tr>
 <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
-    <td><img    class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/My%20pic.jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td><img    class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/My%20pic.jpeg?raw=true" alt="Girl in a jacket" width="200" heigth="250"></td>
     <td>Melisza Córdova</td>
     <td>Universidad De Sonora</td>
     <td>Lic. Químico Biólogo Clínico, 7° Semestre.</td>
